--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "*",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
