--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "google/cloud": "^0.195.0",
+        "google/cloud-firestore": "^1.27",
+        "grpc/grpc": "^1.38",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "*",
